# JdeRobotics_Challenges

./: README.md
Python_Challenge/: Readme.md  run_brownian.py
Python_Challenge/brownian_motion/: brownian_sim.py
ROS2_challenge/: Readme.md
ROS2_challenge/gps_nav2/: Readme.md  package.xml  setup.py
ROS2_challenge/gps_nav2/config/: gps_wpf_demo.mvc  nav2_no_map_params.yaml  object_detection_params.yaml
ROS2_challenge/gps_nav2/gps_nav2/: interactive_waypoint_follower.py  object_detection.py  vision_node.py
ROS2_challenge/gps_nav2/launch/: dual_ekf_navsat.launch.py  gazebo_gps_world.launch.py  gps_waypoint_follower.launch.py  mapviz.launch.py
ROS2_challenge/gps_nav2/models/MaleVisitorPhone/: model.config  model.sdf  static_model.sdf
ROS2_challenge/gps_nav2/models/turtlebot_waffle_gps/: model.sdf
ROS2_challenge/gps_nav2/urdf/: turtlebot3_waffle_gps.urdf
ROS2_challenge/gps_nav2/worlds/: sonoma_raceway.world
ROS2_challenge/hello_ros2/: Readme.md  package.xml  setup.py
ROS2_challenge/hello_ros2/hello_ros2/: hello_pub.py  hello_sub.py
RoboticsAcademy_Challenge/: Readme.md
RoboticsAcademy_Challenge/solution/: follow_line.py
